--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <!-- meta tags -->
   <meta charset="UTF-8" />
@@ -10,36 +11,38 @@
 
   <!-- Open Graph (Facebook & Instagram) -->
   <meta property="og:title" content="SrsEvent – Your Celebration, Your Style" />
-  <meta
-    property="og:description"
-    content="Plan your perfect event with SrsEvent."
-  />
+  <meta property="og:description" content="Plan your perfect event with SrsEvent." />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://srsevent.com" />
-  <meta
-    property="og:image"
-    content="https://srsevent.com/assets/img/og-image.jpg"
-  />
+  <meta property="og:image" content="https://srsevent.com/assets/img/og-image.jpg" />
   <meta property="og:site_name" content="SrsEvent" />
 
   <!-- favicon -->
   <link rel="icon" type="image/x-icon" href="assets/img/common/favicon.jpg" />
 
   <!-- FontAwesome -->
-  <link
-    rel="stylesheet"
-    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
     integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
-    crossorigin="anonymous"
-    referrerpolicy="no-referrer"
-  />
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+  <!-- Google Site Verification -->
+  <meta name="google-site-verification" content="MQaYPdbJOFT8fFvJjpIB9R3ICSb10q5nN9gYnEbZ2Ss" />
+
+  <!-- Google Analytics (GA4) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-4LB643X9G8"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+    gtag('config', 'G-4LB643X9G8');
+  </script>
 </head>
 
 <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!-- Bootstrap JS Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!-- Bootstrap JS Bundle (includes Popper) -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
