--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="canonical" href="https://srsevent.com" />
+  <link rel="sitemap" type="application/xml" title="Sitemap" href="https://srsevent.com/sitemap.xml" />
 
   <!-- Open Graph (Facebook & Instagram) -->
   <meta property="og:title" content="SrsEvent – Your Celebration, Your Style" />
