--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <link rel="canonical" href="https://srsevent.com" />
   <link rel="sitemap" type="application/xml" title="Sitemap" href="https://srsevent.com/sitemap.xml" />
-
+  <meta name="robots" content="index, follow" />
   <!-- Open Graph (Facebook & Instagram) -->
   <meta property="og:title" content="SrsEvent – Your Celebration, Your Style" />
   <meta property="og:description" content="Plan your perfect event with SrsEvent." />
