--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
   <meta property="og:site_name" content="SrsEvent" />
 
   <!-- favicon -->
-  <link rel="icon" type="image/x-icon" href="assets/img/common/favicon.jpg" />
+  <link rel="icon" type="image/png" href="%PUBLIC_URL%/favicon.png" />
 
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
